--- a/book.bib
+++ b/book.bib
@@ -145,3 +145,33 @@
   year={2005},
   publisher={Wiley Online Library}
 }
+
+@article{cayton2005algorithms,
+  title={Algorithms for manifold learning},
+  author={Cayton, Lawrence},
+  journal={Univ. of California at San Diego Tech. Rep},
+  volume={12},
+  number={1-17},
+  pages={1},
+  year={2005}
+}
+
+@article{li1991sliced,
+  title={Sliced inverse regression for dimension reduction},
+  author={Li, Ker-Chau},
+  journal={Journal of the American Statistical Association},
+  volume={86},
+  number={414},
+  pages={316--327},
+  year={1991},
+  publisher={Taylor \& Francis}
+}
+
+@article{mcinnes2018umap,
+  title={UMAP: Uniform Manifold Approximation and Projection},
+  author={McInnes, Leland and Healy, John and Saul, Nathaniel and Gro{\ss}berger, Lukas},
+  journal={Journal of Open Source Software},
+  volume={3},
+  number={29},
+  year={2018}
+}
