--- a/book.bib
+++ b/book.bib
@@ -175,3 +175,33 @@
   number={29},
   year={2018}
 }
+
+@article{cortes1995support,
+  title={Support-vector networks},
+  author={Cortes, Corinna and Vapnik, Vladimir},
+  journal={Machine learning},
+  volume={20},
+  number={3},
+  pages={273--297},
+  year={1995},
+  publisher={Springer}
+}
+
+@inproceedings{boser1992training,
+  title={A training algorithm for optimal margin classifiers},
+  author={Boser, Bernhard E and Guyon, Isabelle M and Vapnik, Vladimir N},
+  booktitle={Proceedings of the fifth annual workshop on Computational learning theory},
+  pages={144--152},
+  year={1992}
+}
+
+@article{kimeldorf1970correspondence,
+  title={A correspondence between Bayesian estimation on stochastic processes and smoothing by splines},
+  author={Kimeldorf, George S and Wahba, Grace},
+  journal={The Annals of Mathematical Statistics},
+  volume={41},
+  number={2},
+  pages={495--502},
+  year={1970},
+  publisher={JSTOR}
+}
